--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -69,3 +69,6 @@ jobs:
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v1
+    - name: Run phpcs-wordpress with reviewdog
+      uses: oohnoitz/action-phpcs-wordpress@v1.6.0
+      
