--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -71,4 +71,11 @@ jobs:
       uses: github/codeql-action/analyze@v1
     - name: Run phpcs-wordpress with reviewdog
       uses: oohnoitz/action-phpcs-wordpress@v1.6.0
+      with:
+          github_token: ${{ secrets.github_token }}
+          # Change reviewdog reporter if you need [github-pr-check,github-check,github-pr-review].
+          reporter: github-pr-review
+          # Change reporter level if you need.
+          # GitHub Status Check won't become failure with warning.
+          level: warning
       
